tests/errors/runtime/module_not_found.zy
<# ./i_do_not_exist <= m

>> m::something() ¶
